# hackathon-hacks-ai-rutube-qna

./: README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: docker.yml
bot/: README.md  pyproject.toml
bot/app/: main.py  qna.py  settings.py
config/: README.md  bot-messages.yml  bot-welcome.txt  replacements.json
data/: README.md  cases.xlsx
data/prep/: real_questions.txt  uniq_real_questions.txt
models/model_1/: label_encoder_1.pkl  vectorizer_1.pkl
models/model_2/: label_encoder_2.pkl  vectorizer_2.pkl
pipelines/: README.md  bot_pipeline_7_rag_all_with_llm.ipynb  pipeline_7_rag_all_with_llm.ipynb
pipelines/baseline/: Dockerfile  README.md  pyproject.toml
pipelines/baseline/app/: main.py  model.py
pipelines/faq/: README.md  pyproject.toml  rag_faq.ipynb
pipelines/faq/app/: main.py  model.py
pipelines/faq_cases/: README.md  pyproject.toml
pipelines/faq_cases/app/: main.py  model.py
pipelines/rag_ranker/: Dockerfile  README.md  pyproject.toml  rag_ranker.ipynb
pipelines/rag_ranker/app/: main.py  model.py
qna/: README.md  pyproject.toml
qna/app/: main.py  metrics.py  service.py
tests/: README.md  k6.js  ping_api.http  questions.txt
